# doctor-management

./: .gitignore  README.md  compose.yml  server.env.example
client/: package.json  pnpm-lock.yaml
client/src/app/: auth.ts  layout.tsx
client/src/app/dashboard/: page.tsx
client/src/app/login/: page.tsx
client/src/app/signup/: page.tsx
server/: README.md  pyproject.toml
server/src/doctor_management/: config.py  dependency.py  main.py  schemas.py
server/src/doctor_management/db/: crud.py  database.py  models.py
server/src/doctor_management/utils/: __init__.py
